# RinkRent

./: .env.example  .gitignore  AGENTS.md  DEPLOY_WALKTHROUGH.md  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
bookings/: admin.py  models.py  notifications.py  services.py  tests.py  urls.py
bookings/management/commands/: generate_slots.py
bookings/migrations/: 0001_initial.py  0002_bookingevent.py  0003_alter_bookingevent_booking.py  0004_add_structured_address.py  0005_add_facility_amenities.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: context_processors.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
customers/: forms.py  models.py  stripe_payment.py  stripe_webhooks.py  tests.py  urls.py  views.py
facilities/: forms.py  models.py  stripe_connect.py  tests.py  urls.py  views.py
templates/: base.html
templates/components/: address_autocomplete.html
templates/core/: home.html  login.html  register.html
templates/customers/: availability.html  book_confirm.html  book_error.html  facility_detail.html  my_bookings.html  payment.html  search.html
templates/facilities/: booking_edit.html  dashboard.html  facility_edit.html  hours_bulk.html  hours_confirm_delete.html  hours_form.html  hours_list.html  manual_reserve.html  register.html  slot_list.html  surface_confirm_delete.html  surface_form.html  surface_list.html
